--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "marticorbalan.github.io/api-rest-react/",
+  "homepage": "https://marticorbalan.github.io/api-rest-react/",
   "name": "api-rest",
   "version": "0.1.0",
   "private": true,
